--- a/html/index.html
+++ b/html/index.html
@@ -3,26 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DOM</title>
+    <title>Shopping Cart</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header class="main-header">
-        <nav class="main-nav nav">
-            <ul>
-                <li><a href="index.html"></a></li>
-                <li><a href="store.html"></a></li>
-                <li> <a href="about.html"></a></li>
-                <li></li>
-            </ul>
-        </nav>
-        <h1></h1>
-    </header>
-
-
-
-
-
-<script src="../js/main.js"></script>    
+    <div class="cart">
+        <h1>Shopping Cart</h1>
+        <div class="items">
+            
+            <!-- Item cards will be dynamically generated here -->
+        </div>
+        <div class="total">
+            <p>Total Price: <span id="totalPrice">$0</span></p>
+        </div>
+    </div>
+    <script src="../js/main.js"></script>
 </body>
 </html>
+
